Fix border color contrast for search input field
ERM43067

[5.1.x]

(cherry picked from commit b84374dcc56b9616fd8fc431b0b3d2c4b6ec29cd)

--- a/resources/stylesheets/structure/navbar-primary.search-form.css
+++ b/resources/stylesheets/structure/navbar-primary.search-form.css
@@ -8,7 +8,7 @@
 	height: 40px;
 	border-radius: 5px 0 0 5px;
 	background-color: var( --navbar-primary-searchform-bg );
-	border-color: var( --navbar-primary-searchform-bg );
+	border-color: var( --navbar-primary-searchform-border-inactive );
 	color: var( --navbar-primary-searchform-fg );
 	border-width: 0.5px 0 0.5px 0.5px;
 }
@@ -25,7 +25,7 @@
 	height: 40px;
 	font-size: 15px;
 	background-color: var( --navbar-primary-searchform-bg );
-	border-color: var( --navbar-primary-searchform-bg );
+	border-color: var( --navbar-primary-searchform-border-inactive );
 	border-width: 0.5px 0.5px 0.5px 0;
 	margin: 0;
 	border-radius: 0 5px 5px 0;
