--- a/resources/stylesheets/themes/default/colors.less
+++ b/resources/stylesheets/themes/default/colors.less
@@ -7,6 +7,7 @@
 	--navbar-primary-fg: @navbar-fg;//#252525;
 	--navbar-primary-fg--hover: @navbar-highlight;// #3E5389;
 	--navbar-primary-border-color: @navbar-highlight;//#3E5389;
+	--navbar-primary-searchform-border-inactive: #72777d;
 	--navbar-primary-searchform-border: @navbar-highlight; //#3E5389;
 	--navbar-primary-searchform-bg: lighten( @navbar-highlight, 57% );
 	--navbar-primary-searchform-fg: var( --navbar-primary-fg );//#252525;
